fix: fix spacing of embeds

--- a/_sass/kids/_typography.scss
+++ b/_sass/kids/_typography.scss
@@ -27,6 +27,7 @@ main {
     }
   }
 
+  p ~ div,
   img,
   video {
     padding: 1em 0;
